<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/dialog_bg"
  android:clipToPadding="false">

  <TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:textSize="24sp"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:gravity="center_horizontal"
    android:layout_marginTop="16dp"
    android:layout_centerHorizontal="true"
    android:textColor="@color/white"
    android:text="@string/msg_enter_code"/>

  <EditText
    android:id="@+id/et_code"
    android:layout_width="257dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="22dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:paddingBottom="15dp"
    android:hint="@string/hint_redemption_code"
    android:textStyle="italic"
    android:inputType="textEmailAddress"
    android:textAllCaps="true"
    android:maxLines="1"
    android:theme="@style/EditTextStyle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

  <Button
    android:id="@+id/btn_cancel"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginEnd="16dp"
    android:clipToPadding="false"
    android:text="@string/action_cancel"
    android:textColor="@color/pinkTheme"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
    app:layout_constraintEnd_toStartOf="@+id/btn_submit"
    app:layout_constraintTop_toTopOf="@+id/btn_submit"/>

  <Button
    android:id="@+id/btn_submit"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginTop="42dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:clipToPadding="false"
    android:text="@string/action_submit"
    android:textColor="@color/pinkTheme"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintRight_toRightOf="@+id/et_code"
    app:layout_constraintTop_toBottomOf="@+id/et_code"
    app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>

